--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dateutil = "^2.8.1"
 pytest = "^5.2"
 jedi = "^0.18.0"
 flake8 = "^3.9.0"
+mypy = "^0.812"
 
 [build-system]
 requires = ["poetry>=0.12"]
